<resources>
    <string name="app_name">FollowMe</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="roadingMsg">진료동선을 불러오고 있습니다.</string>
    <string name="_1f">1F</string>
    <string name="_2f">2F</string>
    <string name="currentLocaction">현위치</string>
    <string name="currentLocaction2">현위치-> </string>
    <string name="startPoint">출발지</string>
    <string name="endPoint">목적지</string>
    <string name="pathMark">경로표시</string>
    <string name="name">이름</string>
    <string name="residentNumber">주민등록번호</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="conditionsPW">숫자, 문자, 특수문자 중 2가지 포함(8~15자)</string>
    <string name="pwCheck">비밀번호 확인</string>
    <string name="phoneNumber">핸드폰번호</string>
    <string name="conditionPhone">\'-\'를 제외하고 입력해주세요.</string>
    <string name="postalCode">우편번호</string>
    <string name="address">자택주소</string>
    <string name="detailAddress">상세주소</string>
    <string name="signUpBtn">SIGN UP</string>
    <string name="loginBtn">LOGIN</string>
    <string name="payment">결제</string>
    <string name="amount">총액</string>
    <string name="paymentUnit">원</string>
    <string name="payNull">진료 내용이 없습니다.</string>
    <string name="subject">진료과</string>
</resources>